Preventing main menu from overflowing on mobile

--- a/themes/shell/styles/layout/_header.scss
+++ b/themes/shell/styles/layout/_header.scss
@@ -7,7 +7,7 @@
     left: 0;
     width: 100%;
     z-index: 50;
-    padding: 0 2rem;
+    padding: 0;
     background: $black;
     transition: $out-transition;
 
@@ -27,7 +27,7 @@
 
       a{
         float: left;
-        font-size: 1rem;
+        font-size: .9rem;
         padding: .5em 0;
         margin: 0 1em;
         text-transform: uppercase;
@@ -83,6 +83,7 @@
 
   // Header
   #block-shell-main-menu{
+    padding: 0 2rem;
 
     .menu{
 
